<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context="com.example.challengecovid.ui.CreateChallengeFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/heading_create_new_challenge"
        android:textSize="26sp">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_create_new_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="132"
            android:hint="@string/hint_name_create_new_challenge">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_create_new_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description_create_new_challenge">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/points_create_new_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_points_create_new_challenge">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_create_new_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">
    </Spinner>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit_create_new_challenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/button_text_create_challenge"
        android:textColor="@color/design_default_color_surface" />

</LinearLayout>